* config-ml.in (CC): Remove bogus duplicate quotation mark from previous delta.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35658 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/config-ml.in
+++ b/config-ml.in
@@ -768,7 +768,7 @@ if [ -n "${multidirs}" ] && [ -z "${ml_norecursion}" ]; then
 	  -[BIL]"${ML_POPDIR}"/*)
 	    CC_="${CC_}"`echo "X${arg}" | sed -n "s/X\\(-[BIL]${popdir_rx}\\).*/\\1/p"`/${ml_dir}`echo "X${arg}" | sed -n "s/X-[BIL]${popdir_rx}\\(.*\\)/\1/p"`' ' ;;
 	  "${ML_POPDIR}"/*)
-	    CC_="${CC_}"`echo "X${arg}" | sed -n "s/X\\(${popdir_rx}\\).*/\\1/p""`/${ml_dir}`echo "X${arg}" | sed -n "s/X${popdir_rx}\\(.*\\)/\\1/p"`' ' ;;
+	    CC_="${CC_}"`echo "X${arg}" | sed -n "s/X\\(${popdir_rx}\\).*/\\1/p"`/${ml_dir}`echo "X${arg}" | sed -n "s/X${popdir_rx}\\(.*\\)/\\1/p"`' ' ;;
 	  *)
 	    CC_="${CC_}${arg} " ;;
 	  esac
