top level: 	* configure: Make enable_threads and enable_shared defaults 	explicit.  Substitute enable_threads into generated Makefiles. 	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*. 	* libtool.m4: Accept *-*-linux* not just *-*-linux-gnu*. gcc: 	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*. 	* fixinc/inclhack.def: Likewise. 	* fixinc/mkfixinc.sh: Likewise. 	* configure: Regenerate. 	* fixinc/fixincl.x: Regenerate. 	* install.texi: Document equivalence of linux and linux-gnu. libio: 	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*. 	Honor --disable-threads. libstdc++: 	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*. 	Honor --disable-threads. libstdc++-v3: 	* configure: Regenerate after change to ../libtool.m4. libobjc: 	* configure: Regenerate after change to ../libtool.m4.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35680 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/configure.in
+++ b/configure.in
@@ -352,7 +352,7 @@ case "${target}" in
   powerpc-*-netware*)
     target_makefile_frag="${target_makefile_frag} config/mt-netware"
     ;;
-  *-*-linux-gnu*)
+  *-*-linux*)
     target_makefile_frag="${target_makefile_frag} config/mt-linux"
     ;;
   *-*-aix4.[3456789]* | *-*-aix[56789].*)
@@ -684,7 +684,7 @@ case "${target}" in
     noconfigdirs="$noconfigdirs target-libg++ ${libstdcxx_version} target-librx target-libgloss target-libffi"
     ;;
   hppa*-*-*elf* | \
-  hppa*-*-linux-gnu* | \
+  hppa*-*-linux* | \
   hppa*-*-lites* | \
   hppa*64*-*-*)
     # Do configure ld/binutils/gas for this case.
