--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -656,9 +656,9 @@ changequote([,])dnl
 		;;
 	esac	
 
-	# Common parts for linux-gnu and openbsd systems
+	# Common parts for linux and openbsd systems
 	case $machine in
-	*-*-linux-gnu*)
+	*-*-linux*)
 		xm_defines="HAVE_ATEXIT POSIX BSTRING"
 		;;
 	*-*-openbsd*)
@@ -733,7 +733,7 @@ changequote([,])dnl
 		#prefix='$$INTERIX_ROOT'/usr/contrib
 		#local_prefix='$$INTERIX_ROOT'/usr/contrib
 		;;
-	alpha*-*-linux-gnuecoff*)
+	alpha*-*-linux*ecoff*)
 		tm_file="${tm_file} alpha/linux-ecoff.h alpha/linux.h"
 		target_cpu_default="MASK_GAS"
 		tmake_file="alpha/t-alpha alpha/t-ieee"
@@ -741,7 +741,7 @@ changequote([,])dnl
 		xmake_file=none
 		gas=yes gnu_ld=yes
 		;;
-	alpha*-*-linux-gnulibc1*)
+	alpha*-*-linux*libc1*)
 		tm_file="${tm_file} alpha/elf.h alpha/linux.h alpha/linux-elf.h"
 		target_cpu_default="MASK_GAS"
 		tmake_file="t-linux t-linux-gnulibc1 alpha/t-alpha alpha/t-crtbe alpha/t-ieee"
@@ -752,7 +752,7 @@ changequote([,])dnl
  			thread_file='posix'
  		fi
 		;;
-	alpha*-*-linux-gnu*)
+	alpha*-*-linux*)
 		tm_file="${tm_file} alpha/elf.h alpha/linux.h alpha/linux-elf.h"
 		target_cpu_default="MASK_GAS"
 		tmake_file="t-linux alpha/t-crtbe alpha/t-alpha alpha/t-ieee"
@@ -888,14 +888,14 @@ changequote([,])dnl
 		tmake_file="t-netbsd arm/t-netbsd"
 		use_collect2=yes
 		;;
-	arm*-*-linux-gnuaout*)		# ARM GNU/Linux with a.out
+	arm*-*-linux*aout*)		# ARM GNU/Linux with a.out
 		cpu_type=arm
 		xmake_file=x-linux
 		tm_file=arm/linux-aout.h
 		tmake_file=arm/t-linux
 		gnu_ld=yes
 		;;
-	arm*-*-linux-gnuoldld*)		# ARM GNU/Linux with old ELF linker
+	arm*-*-linux*oldld*)		# ARM GNU/Linux with old ELF linker
 		xm_file=arm/xm-linux.h
 		xmake_file=x-linux
 		tm_file="arm/linux-oldld.h arm/linux-elf.h"
@@ -913,7 +913,7 @@ changequote([,])dnl
 			;;
 		esac
 		;;
-	arm*-*-linux-gnu*)		# ARM GNU/Linux with ELF
+	arm*-*-linux*)		# ARM GNU/Linux with ELF
 		xm_file=arm/xm-linux.h
 		xmake_file=x-linux
 		tm_file="arm/linux-elf.h"
@@ -1520,7 +1520,7 @@ changequote([,])dnl
 		install_headers_dir=install-headers-cpio
 		;;
 changequote(,)dnl
-	i[34567]86-*-linux-gnuoldld*)	# Intel 80386's running GNU/Linux
+	i[34567]86-*-linux*oldld*)	# Intel 80386's running GNU/Linux
 changequote([,])dnl			# with a.out format using
 					# pre BFD linkers
 		xmake_file=x-linux-aout
@@ -1530,7 +1530,7 @@ changequote([,])dnl			# with a.out format using
 		float_format=i386
 		;;
 changequote(,)dnl
-	i[34567]86-*-linux-gnuaout*)	# Intel 80386's running GNU/Linux
+	i[34567]86-*-linux*aout*)	# Intel 80386's running GNU/Linux
 changequote([,])dnl			# with a.out format
 		xmake_file=x-linux-aout
 		tmake_file="t-linux-aout i386/t-crtstuff"
@@ -1539,7 +1539,7 @@ changequote([,])dnl			# with a.out format
 		float_format=i386
 		;;
 changequote(,)dnl
-	i[34567]86-*-linux-gnulibc1)	# Intel 80386's running GNU/Linux
+	i[34567]86-*-linux*libc1)	# Intel 80386's running GNU/Linux
 changequote([,])dnl			# with ELF format using the
 					# GNU/Linux C library 5
 		xmake_file=x-linux	
@@ -1553,7 +1553,7 @@ changequote([,])dnl			# with ELF format using the
  		fi
 		;;
 changequote(,)dnl
-	i[34567]86-*-linux-gnu*)	# Intel 80386's running GNU/Linux
+	i[34567]86-*-linux*)	# Intel 80386's running GNU/Linux
 changequote([,])dnl			# with ELF format using glibc 2
 					# aka GNU/Linux C library 6
 		xmake_file=x-linux
@@ -2419,7 +2419,7 @@ changequote([,])dnl
 		extra_headers=math-68881.h
 		float_format=m68k
 		;;
-	m68k-*-linux-gnuaout*)		# Motorola m68k's running GNU/Linux
+	m68k-*-linux*aout*)		# Motorola m68k's running GNU/Linux
 					# with a.out format
 		xmake_file=x-linux
 		tm_file=m68k/linux-aout.h
@@ -2428,7 +2428,7 @@ changequote([,])dnl
 		float_format=m68k
 		gnu_ld=yes
 		;;
-	m68k-*-linux-gnulibc1)		# Motorola m68k's running GNU/Linux
+	m68k-*-linux*libc1)		# Motorola m68k's running GNU/Linux
 					# with ELF format using the
 					# GNU/Linux C library 5
 		xmake_file=x-linux
@@ -2439,7 +2439,7 @@ changequote([,])dnl
 		float_format=m68k
 		gnu_ld=yes
 		;;
-	m68k-*-linux-gnu*)		# Motorola m68k's running GNU/Linux
+	m68k-*-linux*)		# Motorola m68k's running GNU/Linux
 					# with ELF format using glibc 2
 					# aka the GNU/Linux C library 6.
 		xmake_file=x-linux
@@ -3176,7 +3176,7 @@ changequote([,])dnl
 		tmake_file="rs6000/t-ppcgas t-rtems rs6000/t-ppccomm"
 		extra_headers=ppc-asm.h
 		;;
-	powerpc-*-linux-gnulibc1)
+	powerpc-*-linux*libc1)
 		tm_file="rs6000/sysv4.h rs6000/linux.h"
 		xm_file=rs6000/xm-sysv4.h
 		out_file=rs6000/rs6000.c
@@ -3187,7 +3187,7 @@ changequote([,])dnl
 			thread_file='posix'
 		fi
 		;;
-	powerpc-*-linux-gnu*)
+	powerpc-*-linux*)
 		tm_file="rs6000/sysv4.h rs6000/linux.h"
 		xm_file="rs6000/xm-sysv4.h"
 		xm_defines="USG ${xm_defines}"
@@ -3379,13 +3379,13 @@ changequote([,])dnl
 		#float_format=i128
 		float_format=i64
 		;;
-	sparc-*-linux-gnuaout*)		# Sparc's running GNU/Linux, a.out
+	sparc-*-linux*aout*)		# Sparc's running GNU/Linux, a.out
 		xm_file="${xm_file} sparc/xm-linux.h"
 		tm_file=sparc/linux-aout.h
 		xmake_file=x-linux
 		gnu_ld=yes
 		;;
-	sparc-*-linux-gnulibc1*)	# Sparc's running GNU/Linux, libc5
+	sparc-*-linux*libc1*)	# Sparc's running GNU/Linux, libc5
 		xm_file="${xm_file} sparc/xm-linux.h"
 		xmake_file=x-linux
 		tm_file=sparc/linux.h
@@ -3394,7 +3394,7 @@ changequote([,])dnl
 		gnu_ld=yes
 		float_format=sparc
 		;;
-	sparc-*-linux-gnu*)		# Sparc's running GNU/Linux, libc6
+	sparc-*-linux*)		# Sparc's running GNU/Linux, libc6
 		xm_file="${xm_file} sparc/xm-linux.h"
 		xmake_file=x-linux
 		tm_file=sparc/linux.h
@@ -3690,7 +3690,7 @@ changequote([,])dnl
 	esac
 
 	case $machine in
-	*-*-linux-gnu*)
+	*-*-linux*)
 	        ;; # Existing GNU/Linux systems do not use the GNU setup.
 	*-*-gnu*)
 		# On the GNU system, the setup is just about the same on
