--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -3279,13 +3279,7 @@ changequote([,])dnl
 		then
 			tmake_file=rs6000/t-xnewas
 		else
-			tmake_file=rs6000/t-newas
-		fi
-		if test "$gnu_ld" = yes
-		then
-			xmake_file=rs6000/x-aix41-gld
-		else
-			tmake_file="rs6000/t-newas rs6000/t-aix41"
+			tmake_file='rs6000/t-newas rs6000/t-aix41'
 		fi
 		xmake_file=rs6000/x-aix41
 		float_format=none
