* gnu/gcj/awt/ComponentDataBlitOp.java: New file. 	* gnu/gcj/awt/GLightweightPeer.java: New file. 	* java/awt/BorderLayout.java: Implemented all methods. 	* java/awt/Button.java (actionListener, actionCommand): Renamed 	and modifier change. 	(addNotify): Call super. 	(dispatchEventImpl): New method. 	(getListeners): New method. 	(label): Made package-private, not private. 	* java/awt/Canvas.java: Implemented class body. 	* java/awt/Color.java (brighter): New method. 	(darker): New method. 	(hashCode): New method. 	* java/awt/Component.java (visible, enabled, eventMask): Set defaults. 	(getGraphicsConfiguration): Delegate to 	getGraphicsConfigurationImpl(). 	(getGraphicsConfigurationImpl): New method. 	(getToolkit): Only return value from peer if not null. 	(isDisplayable): Check with parent. 	(isShowing): No parent implies not showing. 	(getForeground): Check parent property if local is null. 	(getBackground): Likewise. 	(getFont): Likewise. 	(setForeground): Inform peer. 	(setBackground): Likewise 	(setLocale): Invalidate component. 	(getColorModel): Implemented. 	(setLocation): Invalidate, or ignore if no change. 	(setSize): Invalidate, or ignore if no change. 	(setBounds): Invalidate, or ignore if no change. 	(isOpaque): By default, heavyweight implies opaque. 	(isLightweight): Implemented. 	(getMaximumSize): Implemented. 	(doLayout): Implemented, NOP. 	(validate): Implemented, NOP. 	(invalidate): Only propagate to parent if parent was valid. 	(getGraphics): Implemented. 	(getFontMetrics): Implemented. 	(update): Implemented. 	(paintAll): Implemented. 	(repaint): Implemented all repaint methods. 	(print): Implemented. 	(printAll): Implemented. 	(createImage): Implemented. 	(dispatchEvent): Give the peer a chance to handle the event. 	(dispatchEventImpl): Dispatch paint events. 	(enableEvents): Lightweights enable events on parent component. 	(coalesceEvents): Coalesce paint events, and select event type 	using a switch. 	(coalescePaintEvents): New method. 	(proce

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -504,6 +504,8 @@ gnu/java/beans/ExplicitBeanInfo.java \
 gnu/java/beans/IntrospectionIncubator.java \
 gnu/gcj/awt/BitMaskExtent.java \
 gnu/gcj/awt/Buffers.java \
+gnu/gcj/awt/ComponentDataBlitOp.java \
+gnu/gcj/awt/GLightweightPeer.java \
 java/applet/Applet.java \
 java/applet/AppletStub.java \
 java/applet/AppletContext.java \
@@ -536,6 +538,7 @@ java/awt/Font.java \
 java/awt/FontMetrics.java \
 java/awt/Frame.java \
 java/awt/Graphics.java \
+java/awt/Graphics2D.java \
 java/awt/GraphicsConfiguration.java \
 java/awt/IllegalComponentStateException.java \
 java/awt/Image.java \
@@ -557,6 +560,7 @@ java/awt/Panel.java \
 java/awt/Point.java \
 java/awt/PopupMenu.java	\
 java/awt/Rectangle.java	\
+java/awt/RenderingHints.java \
 java/awt/ScrollPane.java \
 java/awt/Scrollbar.java	\
 java/awt/Shape.java \
@@ -617,6 +621,7 @@ java/awt/geom/PathIterator.java	\
 java/awt/geom/Point2D.java \
 java/awt/geom/Rectangle2D.java \
 java/awt/geom/RectangularShape.java \
+java/awt/image/BufferedImage.java \
 java/awt/image/ColorModel.java \
 java/awt/image/ComponentColorModel.java	\
 java/awt/image/ComponentSampleModel.java \
@@ -631,6 +636,7 @@ java/awt/image/ImageProducer.java \
 java/awt/image/IndexColorModel.java \
 java/awt/image/PackedColorModel.java \
 java/awt/image/Raster.java \
+java/awt/image/RasterOp.java \
 java/awt/image/SampleModel.java	\
 java/awt/image/SinglePixelPackedSampleModel.java \
 java/awt/image/WritableRaster.java \
