--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -3279,6 +3279,12 @@ changequote([,])dnl
 		then
 			tmake_file=rs6000/t-xnewas
 		else
+			tmake_file=rs6000/t-newas
+		fi
+		if test "$gnu_ld" = yes
+		then
+			xmake_file=rs6000/x-aix41-gld
+		else
 			tmake_file='rs6000/t-newas rs6000/t-aix41'
 		fi
 		xmake_file=rs6000/x-aix41
@@ -3325,17 +3331,17 @@ changequote([,])dnl
 		use_collect2=yes
 		;;
 	sh-*-elf*)
-		tm_file=sh/elf.h
+		tm_file="sh/sh.h sh/elf.h"
 		float_format=sh
 		;;
 	sh-*-rtemself*)
 		tmake_file="sh/t-sh t-rtems"
-		tm_file=sh/rtemself.h
+		tm_file="sh/sh.h sh/elf.h sh/rtemself.h"
 		float_format=sh
 		;;
 	sh-*-rtems*)
 		tmake_file="sh/t-sh t-rtems"
-		tm_file=sh/rtems.h
+		tm_file="sh/sh.h sh/rtems.h"
 		float_format=sh
 		;;
 	sh-*-*)
