* vax.h (ASM_SPEC): Pass `-J' to assembler.         * x-vax-gcc: New file for bootstrapping with gcc.         * x-vax: Use X_CFLAGS rather than X_CPPFLAGS to pass `-J'.         * configure.in: Use x-vax-gcc with gcc.         * configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35894 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -3670,6 +3670,10 @@ changequote([,])dnl
 		;;
 	vax-*-ultrix*)			# vaxen running ultrix
 		tm_file="${tm_file} vax/ultrix.h"
+		if test x$GCC = xyes
+		then
+			xmake_file=vax/x-vax-gcc
+		fi
 		use_collect2=yes
 		float_format=vax
 		;;
