* c-parse.in (unop +): Restrict -Wtraditional warnings to user code.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35899 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -413,7 +413,7 @@ unop:     '&'
 	| '+'
 		{ $$ = CONVERT_EXPR;
 ifc
-  if (warn_traditional)
+  if (warn_traditional && !in_system_header)
     warning ("traditional C rejects the unary plus operator");
 end ifc
 		}
