* Makefile.in (C_AND_OBJC_OBJS): Remove c-iterate.o. 	(c-iterate.o): Remove target. 	* gcc/c-common.h (enum rid): Remove RID_ITERATOR. 	* gcc/c-decl.c (init_decl_processing): Remove call to init_iterators. 	(finish_decl): Don't handle iterators. 	(grokdeclarator): Likewise. 	* gcc/c-parse.gperf: Remove __iterator and __iterator__ keywords. 	* gcc/c-gperf.h: Regenerated. 	* gcc/c-iterate.c: Removed. 	* gcc/c-lex.c (init_lex): Don't handle iterators. 	* gcc/c-parse.in (primary): Remove pop_iterator_stack call. 	(compstmt_primary_start): Remove push_iterator_stack call. 	(stmt): Don't allow iterator statements.  Replace iterator_expand 	with expand_expr_stmt. 	(all_iter_stmt): Remove. 	(all_iter_stmt_simple): Likewise. 	(all_iter_stmt_with_decl): Likewise. 	* gcc/c-tree.h (ITERATOR_P): Remove. 	(ITERATOR_BOUND_P): Likewise. 	(init_iterators): Remove declaration. 	(iterator_expand): Likewise. 	(iterator_for_loop_start): Likewise. 	(iterator_for_loop_end): Likewise. 	(iterator_for_loop_record): Likewise. 	(push_iterator_stack): Likewise. 	(pop_iterator_stack): Likewise. 	* gcc/c-typeck.c (decl_constant_value): Don't check ITERATOR_P. 	(readonly_warning): Likewise. 	* gcc/tree.h (ITERATOR_BOUND_P): Don't mention it.
	* Make-lang.in (cc1chill): Don't depend on c-iterate.o.

	* gcc.dg/noncompile/930622-2.c: Adjust error message.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35967 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -678,7 +678,7 @@ LANG_FLAGS_TO_PASS = $(SUBDIR_FLAGS_TO_PASS) \
 
 # Language-specific object files for C and Objective C.
 C_AND_OBJC_OBJS = c-errors.o c-lex.o c-pragma.o c-decl.o c-typeck.o \
-  c-convert.o c-aux-info.o c-common.o c-iterate.o c-semantics.o @extra_c_objs@
+  c-convert.o c-aux-info.o c-common.o c-semantics.o @extra_c_objs@
 
 # Language-specific object files for C.
 C_OBJS = c-parse.o c-lang.o $(C_AND_OBJC_OBJS)
@@ -1111,8 +1111,6 @@ c-aux-info.o : c-aux-info.c  $(CONFIG_H) system.h $(TREE_H) c-tree.h \
 c-convert.o : c-convert.c $(CONFIG_H) system.h $(TREE_H) flags.h toplev.h
 c-pragma.o: c-pragma.c $(CONFIG_H) system.h $(RTL_H) $(TREE_H) function.h \
     defaults.h c-pragma.h toplev.h $(GGC_H)
-c-iterate.o: c-iterate.c $(CONFIG_H) system.h $(TREE_H) $(RTL_H) c-tree.h \
-    c-common.h flags.h toplev.h $(EXPR_H)
 mbchar.o: mbchar.c $(CONFIG_H) system.h mbchar.h
 graph.o: graph.c $(CONFIG_H) system.h toplev.h flags.h output.h $(RTL_H) \
     function.h hard-reg-set.h $(BASIC_BLOCK_H) graph.h
